<resources>
    <string name="app_name">Teplodar</string>
    <string name="ButtonProject">Проекты</string>
    <string name="ButtonProschObject">Просчет объекта</string>
    <string name="ButtonHystoryProject">История проектов</string>
    <string name="ButtonPriceList">Прайс лист</string>
    <string name="ButtonMontajList">Список монтажников</string>
    <string name="ButtonBack">Назад</string>
    <string name="ButtonHome">Дом</string>
    <string name="ButtonKv">Квартира</string>
    <string name="ButtonAngar">Ангар</string>
    <string name="ButtonYes">Да</string>
    <string name="ButtonNo">Нет</string>
    <string name="ButtonNext">Далее</string>
    <string name="ButtonTroynik">Твройник</string>
    <string name="ButtonKrestovina">Крестовина</string>
    <string name="ButtonMetalPlast">Металлопласт</string>
    <string name="ButtonShitik">Сшитик</string>
    <string name="ButtonKran1_2">Кран1/2</string>
    <string name="ButtonEvrokonus">Евроконус</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>