<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BG"
    tools:context=".Radiatori">

    <Button
        android:id="@+id/buttonBack3"
        android:layout_width="177dp"
        android:layout_height="55dp"
        android:layout_marginTop="192dp"
        android:layout_marginBottom="67dp"
        android:backgroundTint="@color/BG"
        android:text="@string/ButtonBack"
        android:textColor="@color/NameButton"
        android:textSize="24sp"
        app:cornerRadius="9sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttoNO"
        app:strokeColor="@color/BGButton"
        app:strokeWidth="1sp" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="92dp"
        android:layout_height="76dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/iconlogo" />

    <Button
        android:id="@+id/buttonYes"
        android:layout_width="177dp"
        android:layout_height="55dp"
        android:layout_marginTop="102dp"
        android:backgroundTint="@color/BGButton"
        android:text="@string/ButtonYes"
        android:textSize="24dp"
        app:cornerRadius="9sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:strokeColor="@color/StrokeButton"
        app:strokeWidth="1sp" />

    <Button
        android:id="@+id/buttoNO"
        android:layout_width="177dp"
        android:layout_height="55dp"
        android:layout_marginTop="31dp"
        android:backgroundTint="@color/BGButton"
        app:strokeColor="@color/StrokeButton"
        app:strokeWidth="1sp"
        android:textSize="24dp"
        app:cornerRadius="9sp"
        android:text="@string/ButtonNo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonYes"
         />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="163dp"
        android:text="Переделка радиаторов"
        android:textColor="@color/ColorQuestion"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>