<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BG"
    tools:context=".Fragment.BlankFragment2">

    <Button
        android:id="@+id/buttonBack7"
        android:layout_width="177dp"
        android:layout_height="55dp"
        android:layout_marginTop="192dp"
        android:layout_marginBottom="67dp"
        android:backgroundTint="@color/BG"
        android:text="@string/ButtonBack"
        android:textColor="@color/NameButton"
        android:textSize="24sp"
        app:cornerRadius="9sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonNo"
        app:strokeColor="@color/BGButton"
        app:strokeWidth="1sp" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="92dp"
        android:layout_height="76dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/iconlogo" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:text="Выбор"
        android:textColor="@color/ColorQuestion"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonNo"
        android:layout_width="177dp"
        android:layout_height="55dp"
        android:layout_marginStart="158dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="159dp"
        android:backgroundTint="@color/BGButton"
        android:text="@string/ButtonNo"
        android:textSize="24dp"
        app:cornerRadius="9sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonYes"
        app:strokeColor="@color/StrokeButton"
        app:strokeWidth="1sp" />

    <Button
        android:id="@+id/buttonYes"
        android:layout_width="177dp"
        android:layout_height="55dp"
        app:strokeColor="@color/StrokeButton"
        app:strokeWidth="1sp"
        android:textSize="24dp"
        app:cornerRadius="9sp"
        android:backgroundTint="@color/BGButton"
        android:layout_marginStart="158dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="159dp"

        android:text="@string/ButtonYes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
         />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="177dp"
        android:text="Нептун"
        android:textColor="@color/ColorQuestion"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

</androidx.constraintlayout.widget.ConstraintLayout>